sumo/tests/netconvert/import/XML/errors/xml_false_nod/options.netconvert
--edge-files=input_edges.edg.xml --node-files=hokkaido.nod.xml --output-file=output/net.net.xml
